# MARS-PLUS-Wins

./: Notes.pptx  README.md
MARS-PLUS/: MARS-PLUS.dev  MARS-PLUS.layout  Makefile.win
MARS-PLUS/INPUTS/: control.in
MARS-PLUS/LOG_FILES/: addition_IL.txt  an-1gen.txt  aspirin.txt  benzene_path1.txt  benzene_path2.txt  carotene_path1.txt  carotene_path2.txt  carotene_path3.txt  cat-1gen.txt  change_bnd_IL.txt  change_chirality_IL.txt  change_cistrans_IL.txt  change_ele_IL.txt  combination_IL.txt  crossover_IL.txt  cyclization_IL.txt  decyclization_IL.txt  insertion_IL.txt  statistics.txt  subtraction_IL.txt
MARS-PLUS/LOG_FILES/mds/: BrCCuC(=C(d[C@](uC(=C(uC(C)C)dC)uC)(uC(=CuC)uC)C)uC=C)u[n+]1ccccc1_add_IL.enc  BrC[B-](C#N)(C#N)C#N_chbnd_IL.enc  BrC[C@@H](uC(=C(u[C@@](uC(=C(u[n+]1ccccc1)dCC)uC=C)(uC(=CuC)uC)C)dC)uC)C_add_IL.enc  BrC[C@H](uC(=C(u[C@@](uC(=C(u[n+]1ccccc1)dCC)uC=C)(uC(=CuC)uC)C)dC)uC)C_add_IL.enc  BrCuC(=C(d[C@@](uC(=C(u[n+]1ccccc1)dCC)uC=C)(uC(=CuC)uC)C)uC)uC(C)C_add_IL.enc  BrCuC=C(u[C@@](uC(=C(uC(C)C)dC)uC)(uC(=C(u[n+]1ccccc1)dCC)uC=C)C)dC_add_IL.enc  BrCuC=Cu[C@H](n1cc[n+](c1)C)F_add_IL.enc  BrN(CO[P@@](=O)(OC[C@](Cl)(O)C)[O-])I_chbnd_IL.enc  BrN[B-](C#N)(C#N)C#N_chbnd_IL.enc  BrO[B-](C#N)(C#N)C#N_chbnd_IL.enc  BrP(CO[P@@](=O)(OC[C@](Cl)(O)C)[O-])I_chbnd_IL.enc  BrP[B-](C#N)(C#N)C#N_chbnd_IL.enc  BrS[B-](C#N)(C#N)C#N_chbnd_IL.enc  Br[C@@H](CO[P@@](=O)(OC[C@](Cl)(O)C)[O-])I_chbnd_IL.enc  Br[P@@H](CO[P@@](=O)(OC[C@](Cl)(O)C)[O-])I_chbnd_IL.enc  Br[PH2](CO[P@@](=O)(OC[C@](Cl)(O)C)[O-])I_chbnd_IL.enc  Br[PH2]=C([C@@](uC(=C(uC(C)C)dC)uC)(uC(=C(u[n+]1ccccc1)dCC)uC=C)C)C_chbnd_IL.enc  Br[PH2]=C[C@H](n1cc[n+](c1)C)F_chbnd_IL.enc  Br[PH2][B-](C#N)(C#N)C#N_chbnd_IL.enc  Br[PH3][B-](C#N)(C#N)C#N_chbnd_IL.enc  BruC=C(u[C@@](uC(=C(uC(C)C)dC)uC)(uC(=C(u[n+]1ccccc1)dCC)uC=C)C)dC_chele_IL.enc  BruC=CuC(=C(d[n+]1ccccc1)uCC)u[C@](uC(=C(uC(C)C)dC)uC)(uC(=CuC)uC)C_add_IL.enc  BruC=Cu[C@H](n1cc[n+](c1)C)F_chbnd_IL.enc  BruN=Cu[C@H](n1cc[n+](c1)C)F_chbnd_IL.enc  (+3246 more)
MARS-PLUS/src/: CMakeCache.txt  CMakeLists.txt  PARAMETER.h  UTILITY.cpp  main.cpp
openbabel-master/: LICENSE.txt
openbabel-master/include/: RDKitConv.h
openbabel-master/src/: RDKitConv.cpp  atom.cpp  bondtyper.cpp  chains.cpp  data.cpp  forcefield.cpp  generic.cpp  mcdlutil.cpp  mol.cpp  obconversion.cpp  phmodel.cpp  plugin.cpp  pointgroup.cpp  rotor.cpp  typer.cpp
(+78 files in other folders)
